# core_todo

./: .env.example  .pre-commit-config.yaml  Dockerfile  create_test_db.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: django-test.yml  linters.yml
core/: Dockerfile  authentication.py  middleware.py  test.py
core/api/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  utils.py  views.py
core/api/fixtures/: project_participants.json  projects.json  task_attachments.json  task_subscribers.json  tasks.json
core/api/migrations/: 0001_initial.py  0002_alter_projectmodel_options_and_more.py  0003_alter_taskmodel_unique_together_and_more.py  0004_rename_participation_pk_projectparticipant_project_participant_pk_and_more.py  0005_task_deadline_notified.py  0005_tasknotification.py  0006_remove_project_logo_id_project_creator_id_and_more.py
core/core/: celery.py  kafka_producer.py  settings.py  urls.py
core/core/settings/: __init__.py  base.py  celery.py  ci_cd.py  dev.py  prod.py
core_todo/core/: asgi.py  settings.py  urls.py  wsgi.py
